@@ -10,10 +10,10 @@
 
 #include "FWCore/Framework/interface/EDProducer.h"
 #include "FWCore/Framework/interface/Event.h"
-#include "FWCore/Framework/interface/Handle.h"
 #include "FWCore/ParameterSet/interface/ParameterSet.h"
 #include "FWCore/Framework/interface/EventSetup.h"
 #include "FWCore/Framework/interface/VectorInputSource.h"
+#include "DataFormats/Common/interface/Handle.h"
 #include "IORawData/DaqSource/interface/DaqBaseReader.h"
 
 using namespace edm;
