@@ -1,3 +1,8 @@
+2007-03-07  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-03-03
+	* adjust to reorganization of FWCore
+
 2006-11-11  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-03-02
